// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactsForm returns contacts when adding 1`] = `
<ContactsForm
  className="custom-class"
  contactsTableHeader="Contacts Table Header"
  data={Array []}
  onChange={[MockFunction]}
>
  <div
    className="contacts-form custom-class"
  >
    <InputText
      className="name"
      name="datasetPageFormPage.contactsForm.name"
      onChange={[Function]}
      value=""
    >
      <div
        className="column field name"
      >
        <label
          className="label"
        >
          datasetPageFormPage.contactsForm.name.label
        </label>
        <input
          className="input"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </InputText>
    <InputText
      className="email"
      name="datasetPageFormPage.contactsForm.email"
      onChange={[Function]}
      value=""
    >
      <div
        className="column field email"
      >
        <label
          className="label"
        >
          datasetPageFormPage.contactsForm.email.label
        </label>
        <input
          className="input"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </InputText>
    <InputText
      className="organisation"
      name="datasetPageFormPage.contactsForm.organisation"
      onChange={[Function]}
      value=""
    >
      <div
        className="column field organisation"
      >
        <label
          className="label"
        >
          datasetPageFormPage.contactsForm.organisation.label
        </label>
        <input
          className="input"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </InputText>
    <InputText
      className="position"
      name="datasetPageFormPage.contactsForm.position"
      onChange={[Function]}
      value=""
    >
      <div
        className="column field position"
      >
        <label
          className="label"
        >
          datasetPageFormPage.contactsForm.position.label
        </label>
        <input
          className="input"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </InputText>
    <div
      className="column field"
    >
      <button
        className="add button"
        onClick={[Function]}
      >
        common.add
      </button>
    </div>
    <div
      className="column field"
    >
      <div
        className="title is-5 contacts-table-header"
      >
        Contacts Table Header
      </div>
      <table
        className="general table is-fullwidth is-striped is-hoverable"
      >
        <thead>
          <tr>
            <th>
              datasetPageFormPage.contactsForm.name.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.email.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.organisation.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.position.label
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</ContactsForm>
`;

exports[`ContactsForm returns updated contacts when when adding 1`] = `
<ContactsForm
  className="custom-class"
  contactsTableHeader="Contacts Table Header"
  data={
    Array [
      Object {
        "email": "email-1",
        "name": "name-1",
        "organisation": "organisation-1",
        "position": "position-1",
      },
    ]
  }
  onChange={[MockFunction]}
>
  <div
    className="contacts-form custom-class"
  >
    <InputText
      className="name"
      name="datasetPageFormPage.contactsForm.name"
      onChange={[Function]}
      value=""
    >
      <div
        className="column field name"
      >
        <label
          className="label"
        >
          datasetPageFormPage.contactsForm.name.label
        </label>
        <input
          className="input"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </InputText>
    <InputText
      className="email"
      name="datasetPageFormPage.contactsForm.email"
      onChange={[Function]}
      value=""
    >
      <div
        className="column field email"
      >
        <label
          className="label"
        >
          datasetPageFormPage.contactsForm.email.label
        </label>
        <input
          className="input"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </InputText>
    <InputText
      className="organisation"
      name="datasetPageFormPage.contactsForm.organisation"
      onChange={[Function]}
      value=""
    >
      <div
        className="column field organisation"
      >
        <label
          className="label"
        >
          datasetPageFormPage.contactsForm.organisation.label
        </label>
        <input
          className="input"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </InputText>
    <InputText
      className="position"
      name="datasetPageFormPage.contactsForm.position"
      onChange={[Function]}
      value=""
    >
      <div
        className="column field position"
      >
        <label
          className="label"
        >
          datasetPageFormPage.contactsForm.position.label
        </label>
        <input
          className="input"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </InputText>
    <div
      className="column field"
    >
      <button
        className="add button"
        onClick={[Function]}
      >
        common.add
      </button>
    </div>
    <div
      className="column field"
    >
      <div
        className="title is-5 contacts-table-header"
      >
        Contacts Table Header
      </div>
      <table
        className="general table is-fullwidth is-striped is-hoverable"
      >
        <thead>
          <tr>
            <th>
              datasetPageFormPage.contactsForm.name.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.email.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.organisation.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.position.label
            </th>
          </tr>
        </thead>
        <tbody>
          <ContactRow
            email="email-1"
            key="0"
            name="name-1"
            organisation="organisation-1"
            position="position-1"
          >
            <tr
              className="contact-row"
            >
              <td
                className="name"
              >
                name-1
              </td>
              <td
                className="email"
              >
                email-1
              </td>
              <td
                className="organisation"
              >
                organisation-1
              </td>
              <td
                className="position"
              >
                position-1
              </td>
            </tr>
          </ContactRow>
        </tbody>
      </table>
    </div>
  </div>
</ContactsForm>
`;
